# open-evolve

./: .gitignore  README.md  benchmark_runs.md  plan.md  pyproject.toml  survey.md
examples/benchmark_smoke/: run_three_benchmarks.py
examples/benchmark_smoke/ale_proxy/: task.json
examples/benchmark_smoke/frontier_proxy/: task.json
examples/benchmark_smoke/mle_proxy/: task.json
examples/local_command/: candidate.json  run_search.py  task.json
reports/: codex_harness_summary.md  frontier_codexmix_short_20260603_084328.md  frontier_safe_summary.md  frontier_sota_lookup.md
scripts/: run_real_benchmark_campaign.sh
src/open_evolve/: __init__.py  cli.py
src/open_evolve/agents/: __init__.py  roles.py
src/open_evolve/benchmarks/: __init__.py  _subprocess_json.py  ale_bench.py  base.py  config_loader.py  frontier_eng.py  local_command.py  toy_numeric.py
src/open_evolve/core/: __init__.py  archive.py  artifact_store.py  budget.py  evaluator.py  feedback_compute.py  llm_operators.py  memory.py  model_router.py  operators.py  process_evaluator.py  search_controller.py  trace_recorder.py  types.py
src/open_evolve/experiments/: __init__.py  harness_ablation.py  reporting.py
src/open_evolve/harness/: __init__.py  context_builder.py  governance.py  harness_spec.py  mutation.py  registry.py  replay.py  tool_router.py  verifier_registry.py
src/open_evolve/models/: __init__.py  azure_openai.py
tests/: test_framework.py
