[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "open-evolve-framework"
version = "0.1.0"
description = "Harness-first framework for self-evolving agents on open optimization benchmarks."
requires-python = ">=3.8"
dependencies = []

[project.scripts]
open-evolve = "open_evolve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
